[package]
name = "sp-avn-common"
description = "Common types for avn pallets"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99.2"
hex = { workspace = true }
hex-literal = { version = "0.4.1", default-features = false }
impl-trait-for-tuples = "0.2.2"
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = { workspace = true }
log = { workspace = true }
strum = { version = "0.26.2", features = ["derive"], default-features = false }

sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.13.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.13.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.13.0", features = ["serde"]}
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.13.0" }

libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac",
] }
sha3 = { version = "0.8", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }
serde = { features = ["alloc", "derive"], workspace = true, optional = true }

[dev-dependencies]
byte-slice-cast = "1.2.1"
sha3 = { version = "0.8.2", default-features = false }

[features]
default = ["std"]
test-utils = []
std = [
	"log/std",
	"scale-info/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"libsecp256k1/std",
	"sha3/std",
	"alloy-primitives/std",
	"alloy-sol-types/std",
	"strum/std",
	"serde/std",
	"hex/std",
]

runtime-benchmarks = []

serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]