[package]
name = "sp-avn-common"
description = "Common types for avn pallets"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
impl-trait-for-tuples = "0.2.2"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive", "max-encoded-len"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.20",  default-features = false }
strum = { version = "*", features = ["derive"], default-features = false }

sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", features = ["serde"]}
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", optional = true }

libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac",
] }
sha3 = { version = "0.8", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"], optional = true }

async-trait = { version = "0.1.57", optional = true }
futures = { version = "0.3", optional = true }


[dev-dependencies]
byte-slice-cast = "1.2.1"
sha3 = { version = "0.8.2", default-features = false }

[features]
default = ["std"]
test-utils = []
std = [
	"log/std",
	"scale-info/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"libsecp256k1/std",
	"sha3/std",
	"alloy-primitives/std",
	"alloy-sol-types/std",
	"strum/std",
	"serde/std",
	"sc-transaction-pool-api",
	"async-trait",
	"futures",
]

runtime-benchmarks = []

serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]