[package]
name = "sp-watchtower"
description = "Common types for the watchtower pallet"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { workspace = true }
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = { workspace = true }
log = { workspace = true }
derive_more = "0.99.2"
hex-literal = { version = "0.4.1", default-features = false }
impl-trait-for-tuples = "0.2.2"

sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", features = ["serde"]}
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }

[dev-dependencies]

[features]
default = ["std"]
test-utils = []
std = [
	"log/std",
	"scale-info/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"hex/std",
]

runtime-benchmarks = []