[package]
name = "avn-parachain-runtime"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
docify.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
log.workspace = true

hex-literal = { optional = true, workspace = true, default-features = true }
scale-info.workspace = true
smallvec.workspace = true
docify.workspace = true

frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system.workspace = true
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-try-runtime = { optional = true, workspace = true }
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-message-queue.workspace = true
pallet-session.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
sp-api.workspace = true

sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
pallet-xcm.workspace = true
polkadot-parachain-primitives.workspace = true
polkadot-runtime-common.workspace = true
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true
cumulus-pallet-aura-ext.workspace = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-session-benchmarking.workspace = true
cumulus-pallet-xcm.workspace = true
cumulus-pallet-xcmp-queue.workspace = true
cumulus-primitives-aura.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-timestamp.workspace = true
cumulus-primitives-utility.workspace = true
cumulus-primitives-storage-weight-reclaim.workspace = true
parachains-common.workspace = true
parachain-info.workspace = true


sp-std.workspace = true
pallet-assets.workspace = true
sp-authority-discovery.workspace = true
pallet-authority-discovery.workspace = true
pallet-offences.workspace = true
pallet-im-online.workspace = true
pallet-utility.workspace = true
pallet-referenda.workspace = true
pallet-conviction-voting.workspace = true
pallet-whitelist.workspace = true
pallet-scheduler.workspace = true
pallet-preimage.workspace = true


# AvN pallets
sp-avn-common.workspace = true
sp-watchtower.workspace = true
pallet-avn-offence-handler.workspace = true
pallet-validators-manager.workspace = true
pallet-ethereum-events.workspace = true
pallet-avn.workspace = true
pallet-summary.workspace = true
pallet-token-manager.workspace = true
pallet-nft-manager.workspace = true
pallet-avn-proxy.workspace = true
pallet-avn-transaction-payment.workspace = true
pallet-eth-bridge.workspace = true
pallet-eth-bridge-runtime-api.workspace = true
pallet-parachain-staking.workspace = true
pallet-avn-anchor.workspace = true

# Common Runtime
runtime-common.workspace = true
node-primitives.workspace = true

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-storage-weight-reclaim/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-metadata-hash-extension/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-message-queue/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-offences/std",
	"pallet-im-online/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"pallet-authority-discovery/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"node-primitives/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-authority-discovery/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	# AvN pallets
	"sp-avn-common/std",
	"sp-watchtower/std",
	"pallet-avn/std",
	"pallet-avn-anchor/std",
	"pallet-avn-proxy/std",
	"pallet-avn-offence-handler/std",
	"pallet-eth-bridge/std",
	"pallet-eth-bridge-runtime-api/std",
	"pallet-ethereum-events/std",
	"pallet-nft-manager/std",
	"pallet-summary/std",
	"pallet-token-manager/std",
	"pallet-validators-manager/std",
	"pallet-avn-transaction-payment/std",
	"pallet-parachain-staking/std",
	# Avn Common Runtime
	"runtime-common/std",
	# OpenGov
	"pallet-referenda/std",
	"pallet-conviction-voting/std",
	"pallet-whitelist/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	# AvN pallets
	"pallet-avn-anchor/runtime-benchmarks",
	"pallet-avn-proxy/runtime-benchmarks",
	"pallet-avn-offence-handler/runtime-benchmarks",
	"pallet-eth-bridge/runtime-benchmarks",
	"pallet-ethereum-events/runtime-benchmarks",
	"pallet-avn/runtime-benchmarks",
	"pallet-nft-manager/runtime-benchmarks",
	"pallet-summary/runtime-benchmarks",
	"pallet-token-manager/runtime-benchmarks",
	"pallet-validators-manager/runtime-benchmarks",
	"pallet-avn-transaction-payment/runtime-benchmarks",
	# Staking
	"pallet-parachain-staking/runtime-benchmarks",
	# Avn Common Runtime
	"runtime-common/runtime-benchmarks",
	# OpenGov
	"pallet-referenda/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"runtime-common/try-runtime",
	"pallet-avn-anchor/try-runtime",
	"pallet-avn-offence-handler/try-runtime",
	"pallet-validators-manager/try-runtime",
	"pallet-ethereum-events/try-runtime",
	"pallet-avn/try-runtime",
	"pallet-summary/try-runtime",
	"pallet-token-manager/try-runtime",
	"pallet-nft-manager/try-runtime",
	"pallet-avn-proxy/try-runtime",
	"pallet-avn-transaction-payment/try-runtime",
	"pallet-parachain-staking/try-runtime",
	"pallet-eth-bridge/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-whitelist/try-runtime",
]
