[package]
name = "avn-runtime-common"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }


[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true }

smallvec = "1.11.0"

# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.8.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.8.0" }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.8.0" }

[features]
default = [
	"std",
]
no_std = []
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"node-primitives/std",
	"sp-runtime/std",
	"frame-support/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
]