[package]
name = "avn-runtime-common"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
codec = { workspace = true, features = ["derive"] }
log.workspace = true
scale-info.workspace = true
smallvec.workspace = true

# Substrate
frame-support = { features = ["experimental"], workspace = true }
sp-runtime.workspace = true
node-primitives.workspace = true

[features]
default = [
	"std",
]
no_std = []
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"node-primitives/std",
	"sp-runtime/std",
	"frame-support/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
]